--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -47,13 +47,13 @@
 <section class="header-container">
     <div style="display:flex; justify-content:space-between; align-items:flex-end;">
         <div>
-            {{!-- <a href="https://github.com/MLNLP-World/MyArxiv" style="text-decoration: none;">
+            {{!-- <a href="https://github.com/cjt0313/RoboticsDailyArxiv" style="text-decoration: none;">
                 <div class="header-title">
-                    <span class="header-title-preffix">MLNLP</span>//MyArxiv
+                    <span class="header-title-preffix">Robotics</span>//RoboticsDailyArxiv
                 </div>
             </a> --}}
             <div class="header-title">
-                MyArxiv
+                RoboticsDailyArxiv
             </div>
         </div>
 
